jhj btn-solid-dark 로 변경

--- a/src/assets/styles/component/_button.scss
+++ b/src/assets/styles/component/_button.scss
@@ -182,6 +182,11 @@
     color: #B8BAC7;
     padding: 16px 15px;
   }
+
+  &.btn-fb{
+    font-weight: 500;
+    color: #B8BAC7;
+  }
 }
 
 /* ----------------- END 1. 컬러 ----------------- */
