--- a/src/assets/styles/page/_main.scss
+++ b/src/assets/styles/page/_main.scss
@@ -9,7 +9,7 @@
 }
 /* ========== END 관련 애니메이션 ========== */
 
-/* ========== 메인 ========== */
+/* ========== section-visual ========== */
 .section-visual {
   position: relative;
   width: 100%;
@@ -61,7 +61,9 @@
 .main-search-grp {
   width: 100%;
 }
+/* ========== END section-visual ========== */
 
+/* ========== section-join ========== */
 .section-join {
   
   .join-grp {
@@ -126,6 +128,8 @@
     border-radius: 50px;
   }
 }
+/* ========== END section-join ========== */
+
 
 // .swiper-wrapper {
 //   height: 485px;
@@ -147,6 +151,7 @@
 //   opacity: .5 !important;
 // }
 
+/* ========== section-video ========== */
 .section-video {
   padding: 70px 0;
   background-color: #1E2031;
@@ -192,7 +197,9 @@
     line-height: 1.4;
   }
 }
+/* ========== END section-video ========== */
 
+/* ========== section-recent-review ========== */
 .section-recent-review {
   padding: 80px 0 53.5px;
   overflow: hidden;
@@ -202,6 +209,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
+    position: relative;
   }
 
   .recent-review-hgrp {
@@ -228,8 +236,7 @@
   }
 
   .recent-container {
-    // margin-left: 100px;
-    border: 1px solid #000;
+    position: static;
   }
 
   .recent-review-wrapper {
@@ -237,8 +244,63 @@
     height: 297.5px;
   }
 
-  .recent-button-prev {
-    
+  .recent-btn-grp {
+    position: absolute;
+    left: 0;
+    top: auto;
+    bottom: 30px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .recent-btn-prev {
+    position: static;
+    display: inline-block;
+    margin-top: 0;
+    top: auto;
+    left: auto;
+    width: 18px;
+    height: 18px;
+    @include bg-url('btn', 'btn-slide-prev.svg');
+    background-size: auto;
+    background-position: center center;
+    background-repeat: no-repeat;
+    margin-right: 5px;
+  }
+
+  .recent-btn-next {
+    position: static;
+    display: inline-block;
+    margin-top: 0;
+    top: auto;
+    right: auto;
+    width: 18px;
+    height: 18px;
+    @include bg-url('btn', 'btn-slide-nxt.svg');
+    background-size: auto;
+    background-position: center center;
+    background-repeat: no-repeat;
+    margin-right: 8px;
+  }
+
+  .recent-btn {
+    @include input-reset;
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: auto;
+  }
+
+  .recent-btn-pause {
+    @include bg-url('btn', 'btn-stop.svg');
+    margin-right: 8px;
+  }
+  
+  .recent-btn-play {
+    @include bg-url('btn', 'btn-play-bk.svg');
   }
 
   .review-card {
@@ -303,3 +365,40 @@
     }
   }
 }
+/* ========== END section-recent-review ========== */
+
+/* ========== section-subscribe ========== */
+.section-subscribe {
+  padding: 60px 0 90px;
+
+  .badge-flag {
+    width: 98px;
+    margin-bottom: 12px;
+  }
+
+  .ttl {
+    font-size: rem(25);
+    font-weight: 600;
+    color: #171820;
+    line-height: 1.3;
+    margin-bottom: 40px;
+  }
+
+  .chk-grp {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 20px;
+
+    .check-onoff {
+      margin-right: 7px;
+    }
+
+    .check-box-lb {
+      font-size: rem(15);
+      font-weight: 400;
+      color: #8E909F;
+    }
+  }
+}
+/* ========== END section-subscribe ========== */
