--- a/src/assets/styles/page/_main.scss
+++ b/src/assets/styles/page/_main.scss
@@ -248,7 +248,7 @@
     position: absolute;
     left: 0;
     top: auto;
-    bottom: 30px;
+    bottom: 50px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -297,10 +297,26 @@
   .recent-btn-pause {
     @include bg-url('btn', 'btn-stop.svg');
     margin-right: 8px;
+
+    &:hover {
+      background-color: darken(#fff, 5%);
+    }
+
+    &:active {
+      background-color: darken(#fff, 10%);
+    }
   }
   
   .recent-btn-play {
     @include bg-url('btn', 'btn-play-bk.svg');
+
+    &:hover {
+      background-color: darken(#fff, 5%);
+    }
+
+    &:active {
+      background-color: darken(#fff, 10%);
+    }
   }
 
   .review-card {
