jhj 게시판, 브레드크럼, 삭제하기버튼 컴포넌트에 수록

--- a/src/assets/styles/component/_button.scss
+++ b/src/assets/styles/component/_button.scss
@@ -257,7 +257,7 @@
 
   cursor: pointer;
 
-  .icon-pen{
+  .icon{
     margin-right: 3px;
   }
 
@@ -265,6 +265,12 @@
     @include font-op($c: #171820, $w: 600){
       font-size: 15px;
     }
+  }
+}
+
+.btn-warning-txt{
+  .txt{
+    color: #FF5175;
   }
 }
 
