--- a/src/assets/styles/component/_icon.scss
+++ b/src/assets/styles/component/_icon.scss
@@ -32,6 +32,12 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15' height='15' viewBox='0 0 15 15'%3E%3Cg id='icon-write' transform='translate(0 -1)'%3E%3Cg id='사각형_2240' data-name='사각형 2240' transform='translate(0 1)' fill='%23fff' stroke='%23707070' stroke-width='1' opacity='0'%3E%3Crect width='15' height='15' stroke='none'/%3E%3Crect x='0.5' y='0.5' width='14' height='14' fill='none'/%3E%3C/g%3E%3Cg id='icon-write-2' data-name='icon-write' transform='translate(-7.521 2)'%3E%3Cpath id='패스_6639' data-name='패스 6639' d='M9.239,9.822a.425.425,0,0,0-.115.214l-.594,2.97a.42.42,0,0,0,.412.5.4.4,0,0,0,.082-.008l2.969-.594a.418.418,0,0,0,.215-.115l6.645-6.645L15.886,3.177Z' transform='translate(0 -0.508)' fill='%23171820'/%3E%3Cpath id='패스_6640' data-name='패스 6640' d='M22.481.615a2.1,2.1,0,0,0-2.969,0L18.349,1.777l2.969,2.969,1.162-1.162a2.1,2.1,0,0,0,0-2.969Z' transform='translate(-1.573 0)' fill='%23171820'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
 }
 
+.icon-trash{
+  width: 15px;
+  height: 15px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15' height='15' viewBox='0 0 15 15'%3E%3Cg id='그룹_6230' data-name='그룹 6230' transform='translate(0 -1)'%3E%3Crect id='사각형_2281' data-name='사각형 2281' width='15' height='15' transform='translate(0 1)' fill='%23fff' opacity='0'/%3E%3Cg id='XMLID_1473_' transform='translate(-59 1)'%3E%3Cpath id='XMLID_1476_' d='M93.434,175.486a1.53,1.53,0,0,0,1.509,1.483h6.124a1.53,1.53,0,0,0,1.509-1.483L103.458,165H92.552Zm6.081-7.884h1.007v5.724H99.515Zm-2.014,0h1.007v5.724H97.5Zm-2.014,0h1.007v5.724H95.487Z' transform='translate(-31.459 -161.969)' fill='%23ff5175'/%3E%3Cpath id='XMLID_1481_' d='M69.063,2.206V1.324A1.428,1.428,0,0,0,67.552,0H65.538a1.428,1.428,0,0,0-1.51,1.324v.882H60v1.2H73.091v-1.2Zm-4.028,0V1.324a.476.476,0,0,1,.5-.441h2.014a.476.476,0,0,1,.5.441v.882Z' transform='translate(0)' fill='%23ff5175'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
+}
+
 .icon-cal{
     width: 20px;
     height: 20px;
