--- a/src/assets/styles/ui.scss
+++ b/src/assets/styles/ui.scss
@@ -24,6 +24,7 @@
 @import "layout/footer";
 @import "layout/modal";
 @import "layout/common";
+@import "layout/mypage";
 @import "layout/terms";
 
 // 6. page
