--- a/src/assets/styles/page/_inquiry.scss
+++ b/src/assets/styles/page/_inquiry.scss
@@ -68,7 +68,7 @@
   }
 }
 
-// 페이지 구성요소) - 1:1 문의내역
+// 페이지 구성요소) 1:1 문의내역
 .inquiry-history-wrap {
   margin: 60px 0;
 }
@@ -84,7 +84,7 @@
   }
 }
 
-// 페이지 구성요소) - 1:1 문의상세
+// 페이지 구성요소) 1:1 문의상세
 .inquiry-detail-page{
   .company-hgrp{
     padding-bottom: 0;
