cgs - 스타트업) mypage

--- a/src/assets/styles/component/_button.scss
+++ b/src/assets/styles/component/_button.scss
@@ -274,6 +274,12 @@
   }
 }
 
+.btn-gray-txt{
+  .txt{
+    color: #5C5E70;
+  }
+}
+
 .btn-upload{
   @include circle(30px);
   @include flex-center;
