--- a/src/assets/styles/component/_icon.scss
+++ b/src/assets/styles/component/_icon.scss
@@ -38,6 +38,12 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15' height='15' viewBox='0 0 15 15'%3E%3Cg id='그룹_6230' data-name='그룹 6230' transform='translate(0 -1)'%3E%3Crect id='사각형_2281' data-name='사각형 2281' width='15' height='15' transform='translate(0 1)' fill='%23fff' opacity='0'/%3E%3Cg id='XMLID_1473_' transform='translate(-59 1)'%3E%3Cpath id='XMLID_1476_' d='M93.434,175.486a1.53,1.53,0,0,0,1.509,1.483h6.124a1.53,1.53,0,0,0,1.509-1.483L103.458,165H92.552Zm6.081-7.884h1.007v5.724H99.515Zm-2.014,0h1.007v5.724H97.5Zm-2.014,0h1.007v5.724H95.487Z' transform='translate(-31.459 -161.969)' fill='%23ff5175'/%3E%3Cpath id='XMLID_1481_' d='M69.063,2.206V1.324A1.428,1.428,0,0,0,67.552,0H65.538a1.428,1.428,0,0,0-1.51,1.324v.882H60v1.2H73.091v-1.2Zm-4.028,0V1.324a.476.476,0,0,1,.5-.441h2.014a.476.476,0,0,1,.5.441v.882Z' transform='translate(0)' fill='%23ff5175'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
 }
 
+.icon-exit {
+  width: 15px;
+  height: 15px;
+  background-image: url("data:image/svg+xml,%3Csvg id='icon-out' xmlns='http://www.w3.org/2000/svg' width='15' height='15' viewBox='0 0 15 15'%3E%3Crect id='사각형_2217' data-name='사각형 2217' width='15' height='15' fill='%23fff' opacity='0'/%3E%3Crect id='사각형_2218' data-name='사각형 2218' width='2' height='13' rx='1' transform='translate(0 1)' fill='%235c5e70'/%3E%3Crect id='사각형_2219' data-name='사각형 2219' width='2' height='8.261' rx='1' transform='translate(12.261 6.5) rotate(90)' fill='%235c5e70'/%3E%3Cpath id='다각형_20' data-name='다각형 20' d='M4.912.428a1,1,0,0,1,1.176,0L8.513,2.191A1,1,0,0,1,7.925,4H3.075a1,1,0,0,1-.588-1.809Z' transform='translate(14 2) rotate(90)' fill='%235c5e70'/%3E%3C/svg%3E%0A");
+}
+
 .icon-cal{
     width: 20px;
     height: 20px;
