--- a/src/assets/styles/page/_mypage.scss
+++ b/src/assets/styles/page/_mypage.scss
@@ -1,6 +1,67 @@
 .myinfo-page {
 
+  .mypage-card {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 30px 40px;
+    background-color: #fff;
+  }
+
+  .name-box {
+    min-width: 370px;
+    padding-top: 21px;
+
+    .name {
+      font-size: rem(24);
+      font-weight: 400;
+      color: #171820;
+      line-height: 1.3;
+      margin-bottom: 30px;
+
+      .bold-txt {
+        font-weight: 600;
+      }
+    }
+  }
+
   .btn-edit {
     padding: 12px 35.5px;
+  }
+
+  .info-box {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .info-grp {
+    // padding: 19.5px 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .info-label {
+    padding: 19.5px 0;
+    font-size: rem(15);
+    font-weight: 600;
+    color: #171820;
+    min-width: 170px;
+    display: inline-block;
+  }
+
+  .info {
+    flex-grow: 1;
+    padding: 19.5px 0;
+    font-size: rem(15);
+    font-weight: 400;
+    color: #171820;
+    border-bottom: 1px solid rgba(#DDDEE6, 0.6);
+  }
+
+  .btn-gray-txt {
+    align-self: flex-end;
+    margin-top: 25px;
   }
 }
