--- a/src/assets/styles/layout/_common.scss
+++ b/src/assets/styles/layout/_common.scss
@@ -25,15 +25,16 @@
 
   .avatar{
     margin-right: 8px;
+    flex-shrink: 0;
   }
 
   .name{
+    @include ellipse(1, 15px);
     @include font-op($w: 400, $c: #171820){
       font-size: 14px;
     }
 
     -webkit-text-stroke: 0.5px #171820;
-    display: inline-block;
   }
 
   .name-grp{
@@ -55,6 +56,7 @@
   }
 
   .name-subtxt-grp{
+    @include ellipse(1, 14px);
     @include font-op($w: 300, $c: #8e909f){
       font-size: 12px;
     }
@@ -65,11 +67,13 @@
   }
 
   .name-subtxt-list{
-    display: inline-block;
+    display: inline;
     position: relative;
     margin-right: 1.5px;
+    padding-right: 6px;
 
     @include make-after('·'){
+      @include absolute($t: 0, $r: 0);
       display: inline-block;
       transform: translateX(-1px);
     };
