--- a/src/assets/styles/layout/_mypage.scss
+++ b/src/assets/styles/layout/_mypage.scss
@@ -16,17 +16,123 @@
 
 // 사이드네비게이션
 .layout-mypage-side-nav{
+  @include custom-scroll($c: #dddee6, $w: 4px);
+
   width: 100%;
   height: 100%;
   max-width: 285px;
   background-color: white;
   box-shadow: 0 0 30px rgba(#DDDEE6, 0.4);
   flex-shrink: 0;
+  padding: 40px 23px;
+  overflow: auto;
 }
 
-.layout-mypage-container{
-  padding: 40px 0;
+.mypage-snav-ttl-grp{
+  border-bottom: 0;
+  margin-bottom: 17px;
+
+  .ttl{
+    font-weight: 600;
+    font-size: 20px;
+    color: #171820;
+    -webkit-text-stroke: 0.5px #171820;
+  }
+}
+
+.mypage-snav-grp{
+  padding: 22px 0;
+}
+
+.mypage-snav-list.is-active{
+  .mypage-snav-lnb-grp{
+    display: block;
+  }
+
+  .mypage-snav-btn {
+    .txt{
+      font-weight: 500;
+    }
+
+    .arrow{
+      transform: rotate(90deg);
+    }
+  }
+}
+
+.mypage-snav-btn{
+  @include flex{
+    @include flex-op(flex-start, flex-start);
+  }
+  @include input-reset;
+
   width: 100%;
+  text-align: left;
+  padding: 11px 10px;
+  cursor: pointer;
+  color: #171820;
+
+  .txt{
+    display: block;
+    font-weight: 400;
+    -webkit-text-stroke: 0.5px #171820;
+    font-size: 16px;
+    line-height: 1.4;
+  }
+
+  .arrow{
+    @include bg-op($p: center, $s: contain);
+
+    display: block;
+    width: 15px;
+    height: 10px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='5.592' height='9.061' viewBox='0 0 5.592 9.061'%3E%3Cpath id='패스_1' data-name='패스 1' d='M-19274.736-7922.715l4,4-4,4' transform='translate(19275.268 7923.245)' fill='none' stroke='%23171820' stroke-width='1.5'/%3E%3C/svg%3E%0A");
+    margin-left: auto;
+    margin-right: 0;
+    transition: all 0.2s;
+    transform: rotate(0);
+    margin-top: 6px;
+  }
+}
+
+.mypage-snav-btn.router-link-active{
+  background-color: #f9f9fb;
+  border-radius: 10px;
+}
+
+.mypage-snav-lnb-grp{
+  width: 100%;
+  padding: 15px 0 5px;
+  padding-left: 30px;
+  display: none;
+
+  .lnb-btn{
+    @include input-reset;
+
+    display: inline-block;
+    width: 100%;
+    font-size: 15px;
+    color: #8E909F;
+    text-align: left;
+    margin: 6px 0;
+    cursor: pointer;
+  }
+
+  .lnb-btn.router-link-active{
+    color: #171820;
+    -webkit-text-stroke: 0.5px #171820;
+  }
+}
+
+// 우측 컨텐츠영역
+.layout-mypage-container{
+  @include custom-scroll($c: #c4c5cc, $w: 8px);
+  @include flex-col;
+  @include flex-op(stretch, space-between);
+  
+  width: 100%;
+  height: 100%;
+  overflow: auto;
 
   .footer{
     background-color: transparent;
@@ -38,12 +144,39 @@
 }
 
 .mypage-container{
+  padding: 40px 0;
   width: 90%;
   max-width: 1090px;
   margin: 0 auto;
+
+  .empty-wrap{
+    margin: 65px 0;
+  }
+
+  .pagination{
+    margin-top: 70px;
+  }
 }
 
-// 페이지 구성요소) 마이페이지 제목그룹
+// 페이지 구성요소) 마이페이지 페이지 제목
 .mypage-hgrp{
-  
+  width: 100%;
+  margin-bottom: 35px;
+
+  .breadcrumb{
+    margin-bottom: 15px;
+  }
+
+  .ttl{
+    @include font-op($w: 600, $c: #171820){
+      font-size: 20px;
+    }
+
+    -webkit-text-stroke: 0.5px #171820;
+    line-height: 1.4;
+  }
+}
+
+// 페이지 구성요소) 마이페이지 페이지 컨텐츠
+.mypage-cont-wrap{
 }
