--- a/src/assets/styles/page/_mypage.scss
+++ b/src/assets/styles/page/_mypage.scss
@@ -91,7 +91,7 @@
 
 // myinfo-edit
 .myinfo-edit-page {
-
+  
   .mypage-card {
     background-color: #fff;
     padding: 40px 0 50px;
@@ -100,6 +100,80 @@
   .btn-grp {
     margin-top: 60px;
   }
+}
+// END myinfo-edit
 
+.myinfo-leave-page {
+  // background-color: #fff;
+
+  .mypage-card {
+    background-color: #fff;
+    padding: 40px 40px 50px 40px;
+  }
+
+  .cont-grp {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 20px;
+  }
+
+  .left-box {
+    flex-grow: 1;
+    flex-basis: 50%;
+    padding: 20px;
+    background-color: #F9F9FB;
+  }
+
+  .terms-ttl {
+    font-size: rem(18);
+    font-weight: 500;
+    color: #171820;
+    margin-bottom: 20px;
+  }
+
+  .terms-area {
+    @include custom-scroll(#00EB79, $w: 6px);
+
+    background-color: #fff;
+    padding: 20px;
+    font-size: rem(15);
+    font-weight: 400;
+    color: #171820;
+    overflow: auto;
+    height: 320px;
+  }
+
+  .right-box {
+    flex-grow: 1;
+    flex-basis: 50%;
+
+    .lbel-inp-grp {
+      
+      &:first-child {
+        margin: 0 0 17px 0;
+      }
+
+      &:last-child {
+        margin: 17px 0 0 0;
+      }
+    }
+  }
+
+  .chk-grp {
+    margin: 44px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .check-onoff {
+      margin-right: 7px;
+    }
+  }
+
+  .btn-grp {
+    width: 380px;
+    margin: 0 auto;
+  }
 }
 
