cgs - 디테일 추가

--- a/src/assets/styles/page/_mypage.scss
+++ b/src/assets/styles/page/_mypage.scss
@@ -62,6 +62,22 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+
+    .info {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+    }
+
+    .badge {
+      color: #8E909F;
+      border: 1px solid #8E909F;
+      border-radius: 50px;
+      padding: 4px 9.5px;
+      font-size: rem(12);
+      font-weight: 500;
+      margin-left: 8px;
+    }
   }
 
   .info-label {
