jhj 스타트업 쪽지 상세 화면 완료, 쪽지 보내기 화면 완료

--- a/src/assets/styles/component/_icon.scss
+++ b/src/assets/styles/component/_icon.scss
@@ -38,6 +38,12 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15' height='15' viewBox='0 0 15 15'%3E%3Cg id='그룹_6230' data-name='그룹 6230' transform='translate(0 -1)'%3E%3Crect id='사각형_2281' data-name='사각형 2281' width='15' height='15' transform='translate(0 1)' fill='%23fff' opacity='0'/%3E%3Cg id='XMLID_1473_' transform='translate(-59 1)'%3E%3Cpath id='XMLID_1476_' d='M93.434,175.486a1.53,1.53,0,0,0,1.509,1.483h6.124a1.53,1.53,0,0,0,1.509-1.483L103.458,165H92.552Zm6.081-7.884h1.007v5.724H99.515Zm-2.014,0h1.007v5.724H97.5Zm-2.014,0h1.007v5.724H95.487Z' transform='translate(-31.459 -161.969)' fill='%23ff5175'/%3E%3Cpath id='XMLID_1481_' d='M69.063,2.206V1.324A1.428,1.428,0,0,0,67.552,0H65.538a1.428,1.428,0,0,0-1.51,1.324v.882H60v1.2H73.091v-1.2Zm-4.028,0V1.324a.476.476,0,0,1,.5-.441h2.014a.476.476,0,0,1,.5.441v.882Z' transform='translate(0)' fill='%23ff5175'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
 }
 
+.icon-reply{
+  width: 15px;
+  height: 15px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15' height='15' viewBox='0 0 15 15'%3E%3Cg id='icon-msg-bk' transform='translate(0 -1)'%3E%3Cg id='사각형_2240' data-name='사각형 2240' transform='translate(0 1)' fill='%23fff' stroke='%23707070' stroke-width='1' opacity='0'%3E%3Crect width='15' height='15' stroke='none'/%3E%3Crect x='0.5' y='0.5' width='14' height='14' fill='none'/%3E%3C/g%3E%3Cg id='icon-msg-bk-2' data-name='icon-msg-bk' transform='translate(-2.057 -1.268)'%3E%3Cpath id='패스_4656' data-name='패스 4656' d='M14.033,94.321c0-3.472-3.141-6.287-7.016-6.287S0,90.849,0,94.321a6.4,6.4,0,0,0,4.825,5.973L4.4,101.609a.135.135,0,0,0,.169.172l4-1.328A6.485,6.485,0,0,0,14.033,94.321Z' transform='translate(2.541 -85.291)' fill='%23171820'/%3E%3Cg id='그룹_4489' data-name='그룹 4489' transform='translate(5.249 8.225)'%3E%3Ccircle id='타원_10' data-name='타원 10' cx='0.868' cy='0.868' r='0.868' transform='translate(3.528)' fill='%23fff'/%3E%3Ccircle id='타원_11' data-name='타원 11' cx='0.868' cy='0.868' r='0.868' fill='%23fff'/%3E%3Ccircle id='타원_12' data-name='타원 12' cx='0.868' cy='0.868' r='0.868' transform='translate(7.055)' fill='%23fff'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
+}
+
 .icon-exit {
   width: 15px;
   height: 15px;
