--- a/src/assets/styles/layout/_common.scss
+++ b/src/assets/styles/layout/_common.scss
@@ -1147,7 +1147,7 @@
   }
 }
 
-// 받은 쪽지, 보낸 쪽지
+// 쪽지함 list 페이지: 받은 쪽지, 보낸 쪽지
 .note-list-grp{
   border-top: 0;
 
@@ -1173,5 +1173,127 @@
 
     color: #5c5e70;
     font-size: 13px;
+  }
+}
+
+// 쪽지함 detail 페이지: 쪽지 상세
+.nboard-detail-wrap{
+  border: 1px solid #DDDEE6;
+}
+
+.nboard-detail-hd{
+  @include flex{
+    @include flex-op(center, flex-start);
+  }
+
+  width: 100%;
+  background-color: #F9F9FB;
+  padding: 15px 40px;
+
+  .nbhd-etc-grp{
+    @include flex-center;
+
+    gap: 15px;
+    font-size: 13px;
+    margin-left: auto;
+  }
+
+  .board-note-state{
+    color: #8E909F;
+  }
+
+  .board-etc-txt{
+    color: #B8BAC7;
+  }
+}
+
+.nboard-detail-cont{
+  width: 100%;
+  margin-top: 30px;
+  padding: 0 40px 30px;
+
+  .nbcont{
+    @include font-op($c: #5C5E70){
+      font-size: 16px;
+    }
+
+    line-height: 1.5;
+  }
+
+  .nbcont-btns{
+    @include flex{
+      @include flex-op(center, flex-end);
+    }
+
+    gap: 20px;
+    margin-top: 30px;
+  }
+}
+
+// 쪽지함 create 페이지: 쪽지 보내기
+.nboard-form-wrap{
+  border: 1px solid #DDDEE6;
+  padding: 30px 40px 40px;
+
+  .nboard-form-hd{
+    width: 100%;
+    border-bottom: 1px solid #dddee6;
+  }
+
+  .nboard-form-ttl{
+    @include font-op($w: 500, $c: #171820){
+      font-size: 18px;
+    } 
+
+    line-height: 1.4;
+    padding-bottom: 25px;
+  }
+  
+  .length-unit{
+    font-size: 12px;
+    color: #5C5E70;
+  }
+
+  .nboard-btn-grp{
+    max-width: 380px;
+    margin: 35px auto 0;
+  }
+}
+
+.nboard-form-item{
+  @include flex{
+    @include flex-op(stretch, flex-start);
+  };
+
+  flex-direction: column;
+  margin: 20px 0;
+
+  &:last-child{
+    margin-bottom: 0;
+  }
+  
+  .lbel{
+    @include flex{
+      @include flex-op(center, flex-start);
+    }
+
+    color: #5C5E70;
+    margin-bottom: 10px;
+
+    .length-unit{
+      margin-left: auto;
+    }
+  }
+}
+
+.nboard-form-item.type-row{
+  @include flex-op(center, flex-start);
+
+  flex-direction: row;
+
+  .lbel{
+    min-width: 50px;
+    padding-right: 15px;
+    margin-bottom: 0;
   }
 }
