--- a/src/assets/styles/ui.scss
+++ b/src/assets/styles/ui.scss
@@ -34,4 +34,5 @@
 @import "page/inquiry";
 @import "page/main";
 @import "page/mypage";
+@import "page/mypage-factcheck";
 @import "page/etpr-profile";
