jhj 팩트체커 신청서 작성 페이지 완료

--- a/src/assets/styles/component/_button.scss
+++ b/src/assets/styles/component/_button.scss
@@ -435,6 +435,12 @@
   max-width: 235px;
 }
 
+/* 버튼 포지션 센터일 때 */
+[position="double-centered"]{
+  margin: 0 auto;
+  max-width: 380px;
+}
+
 /* 뱃지 스타일 */
 .badge-rounded{
   background-color: #DFFFE8;
