--- a/src/assets/styles/page/_mypage-factcheck.scss
+++ b/src/assets/styles/page/_mypage-factcheck.scss
@@ -65,3 +65,10 @@
     }
   }
 }
+
+// 마이페이지 > 팩트체크 > 팩트체커 신청 > 신청서 작성완료
+.mypage-ftck-apply-complete-page{
+  .state-guide-box{
+    margin-bottom: 40px;
+  }
+}
