--- a/src/assets/styles/component/_icon.scss
+++ b/src/assets/styles/component/_icon.scss
@@ -14,6 +14,12 @@
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14.095' height='11.132' viewBox='0 0 14.095 11.132'%3E%3Cpath id='icon-check-gn' d='M5.115,10.494l4.35,3.965,7.65-8' transform='translate(-4.104 -5.422)' fill='none' stroke='%2353ff81' stroke-width='3'/%3E%3C/svg%3E%0A");
 }
 
+.icon-check-white{
+  width: 14px;
+  height: 13px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14.095' height='11.132' viewBox='0 0 14.095 11.132'%3E%3Cpath id='icon-check-gr' d='M5.115,10.494l4.35,3.965,7.65-8' transform='translate(-4.104 -5.422)' fill='none' stroke='%23fff' stroke-width='3'/%3E%3C/svg%3E%0A");
+}
+
 .icon-msg{
     width: 26px;
     height: 26px;
