jhj 팩트체크 진행상태 뱃지 wrap 스타일 추가

--- a/src/assets/styles/component/_button.scss
+++ b/src/assets/styles/component/_button.scss
@@ -467,6 +467,11 @@
   }
 }
 
+.badge-state-wrap{
+  display: inline-block;
+  vertical-align: middle;
+}
+
 .badge-state{
   cursor: default;
   background-color: #171820;
