--- a/src/assets/styles/layout/_common.scss
+++ b/src/assets/styles/layout/_common.scss
@@ -1592,6 +1592,7 @@
   color: white;
   text-align: left;
   padding: 40px;
+  margin-bottom: 10px;
 
   .check-badge{
     margin-bottom: 6px;
@@ -1620,6 +1621,57 @@
 
     .inp{
       border-color: #00eb79;
+    }
+  }
+}
+
+// 구성요소 팩트체크 리스트
+.ftck-list-grp{
+  border-top: 0;
+
+  .empty-wrap{
+    padding: 60px 0 50px;
+  }
+
+  .board-list{
+    margin-bottom: 10px;
+    background-color: white;
+    border: 0;
+  }
+
+  .board-list.is-secret{
+    .subject{
+      color: #8E909F;
+    }
+  }
+
+  .ftck-state{
+    @include flex{
+      @include flex-op(center, flex-start)
+    };
+
+    gap: 10px;
+    margin-bottom: 10px;
+  }
+
+  .ftck-subject{
+    @include flex{
+      @include flex-op(center, flex-start)
+    };
+
+    gap: 8px;
+
+    .lbel{
+      color: #8E909F;
+      padding-top: 3px;
+      flex-shrink: 0;
+    }
+
+    .subject{
+      @include ellipse(1, 18px);
+      @include font-op($c: #171820, $w: 500){
+        font-size: 16px;
+      }
     }
   }
 }
